# Dust

./: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  network.rs
src-tauri/src/manager/: manager.rs  mod.rs
src-tauri/src/task/: history.rs  json.rs  memento.rs  mod.rs  momento.rs  state.rs  task.rs
src-tauri/src/task_manager/: mod.rs  task_manager.rs
src-tauri/src/tasks/: mod.rs  task.rs  task_json.rs  task_persisted.rs  task_state.rs
src-tauri/src/worker/: command.rs  mod.rs  worker.rs
src/features/dashboard/components/: Dashboard.tsx
src/features/dashboard/components/contextMenu/: ContextMenu.tsx
src/features/dashboard/components/modal/: DirectoryPicker.tsx  TaskCreationModal.tsx  TaskCreationModalInput.tsx
src/features/dashboard/components/topbar/: CurrentViewLabel.tsx  IconButton.tsx  Topbar.tsx
src/features/sidebar/components/: Sidebar.tsx  SidebarItem.tsx
src/features/tasks/components/: TableRow.tsx  TaskProgress.tsx  TaskSelectionCheckbox.tsx  TaskStateBadge.tsx  TaskTable.tsx  TaskTableHeader.tsx
src/features/tasks/hooks/: useContextMenu.ts  useTaskPolling.ts  useTaskTable.ts
src/features/tasks/schema/: tableSchema.tsx
src/features/tasks/types/: Task.ts  TaskState.ts  TaskTable.ts
src/stores/: taskStore.ts  viewStore.ts
src/types/: TaskView.ts
src/utils/: bytes.ts
